--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "site": {
-    "title": "Bigspring Light Nextjs",
+    "title": "Sangsanga, kota wisata juang",
     "base_url": "/",
-    "favicon": "/images/favicon.png",
+    "favicon": "/images/logo.png",
     "logo": "/images/logo.png",
     "logo_width": "200",
     "logo_height": "48",
@@ -16,7 +16,7 @@
   },
 
   "nav_button": {
-    "enable": true,
+    "enable": false,
     "label": "Get Started",
     "link": "/contact"
   },
@@ -25,12 +25,12 @@
     "contact_form_action": "",
     "tag_manager_id": "",
     "footer_content": "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur.",
-    "copyright": "Designed and Developed By [Themefisher](https://themefisher.com/)"
+    "copyright": "Made with ❤️ by Iki"
   },
 
   "metadata": {
-    "meta_author": "Themefisher",
+    "meta_author": "Iki",
     "meta_image": "",
-    "meta_description": "A SAAS template for nextjs"
+    "meta_description": "Sangasanga"
   }
 }
