--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-lite-youtube-embed": "^2.3.52",
+    "react-parallax": "^3.5.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "swiper": "^8.4.5"
